<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item
        android:id="@+id/showpw"
        android:orderInCategory="1"
        android:title="@string/show_pw"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/setting"
        android:orderInCategory="2"
        android:title="@string/setting"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/help"
        android:orderInCategory="3"
        android:title="@string/help"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/about"
        android:orderInCategory="4"
        android:title="@string/about"
        app:showAsAction="never">
    </item>
</menu>
