<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

   <!-- <com.startapp.android.publish.banner.Banner
        android:id="@+id/startAppBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"/>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/accent_material_light"
            android:text="@string/network_type" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/accent_material_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/net_type" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/accent_material_light"
            android:text="@string/network_list" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/accent_material_dark" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <ListView
            android:id="@+id/wifilist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </ListView>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/scan"
            android:id="@+id/bt_scan"
            android:background="@color/accent_material_light"
            android:textColor="@color/secondary_text_default_material_dark" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:id="@+id/bt_clear"
            android:background="@color/accent_material_light"
            android:textColor="@color/secondary_text_default_material_dark" />
    </LinearLayout>
</LinearLayout>